--- a/app/views/accounts/_site.html.erb
+++ b/app/views/accounts/_site.html.erb
@@ -1,1 +1,1 @@
-<li><%= link_to truncate(site.title , :length => 17) , site.url %></li>
+<li class = "site-name"><%= link_to truncate(site.title , :length => 17) , site.url %></li>
