--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,20 +1,20 @@
-<ol id = "ruby_logo">
-  <li>R</li>
-  <li>u</li>
-  <li>b</li>
-  <li>y</li>
+<ol id = "ruby-logo">
+  <li id = "r1">R</li>
+  <li id = "u" >u</li>
+  <li id = "b" >b</li>
+  <li id = "y" >y</li>
 </ol>
-<ol id = "committers_logo">
-  <li>C</li>
-  <li>o</li>
-  <li>m</li>
-  <li>m</li>
-  <li>i</li>
-  <li>t</li>
-  <li>t</li>
-  <li>e</li>
-  <li>r</li>
-  <li>s</li>
+<ol id = "committers-logo">
+  <li id = "c" >C</li>
+  <li id = "o" >o</li>
+  <li id = "m1">m</li>
+  <li id = "m2">m</li>
+  <li id = "i" >i</li>
+  <li id = "t1">t</li>
+  <li id = "t2">t</li>
+  <li id = "e" >e</li>
+  <li id = "r2">r</li>
+  <li id = "s" >s</li>
 </ol>
 
 <%= link_to 'Fork me on Github', 'http://github.com/tenderlove/rubycommitters.org' , :id => 'fork_me' %>
