Forgot to change the fork id, d'oh

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -17,7 +17,7 @@
   <li id = "s" >s</li>
 </ol>
 
-<%= link_to 'Fork me on Github', 'http://github.com/tenderlove/rubycommitters.org' , :id => 'fork_me' %>
+<%= link_to 'Fork me on Github', 'http://github.com/tenderlove/rubycommitters.org' , :id => 'fork-me' %>
 <ul id = "committers">
   <%= render :partial => 'account', :collection => @accounts %>
 </ul>
