--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -203,6 +203,7 @@ label {
   list-style:   none;
   border-right: 2px solid #4B4E64;
   border-left:  2px solid #4B4E64;
+  overflow:     hidden;
 }
 
 .book-name {
