--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Ruby Committers</title>
-  <%= stylesheet_link_tag :all %>
+  <%= stylesheet_link_tag    :defaults %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
   <%= analytics_tag %>
