--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
   <%= analytics_tag %>
+  <link rel="icon" type="image/png" href="/images/favicon.png" />
 </head>
 <body>
 
