--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -64,6 +64,7 @@ label {
   top:        45px;
   left:       125px;
   width:      150px;
+  margin:     0;
   padding:    0;
   position:   absolute;
   list-style: none;
@@ -80,8 +81,6 @@ label {
 
 .nicknames {
   padding:    0;
-  left:       0;
-  bottom:     0;
   display:    inline;
   list-style: none;
 }
