Fixed margin bug on total contributors message Changed no results message Updated footer credits to use twitter links

--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -196,7 +196,7 @@ a.big_link {
 }
 #stats {
   float: left;
-  margin-bottom:-5px;
+  margin-top: 16px;
   font-weight: bold;
   color: #444;
   text-shadow: 0 1px 1px white;
