Fork me on Github.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,5 +18,9 @@
       <%= yield %>
     </div>
 
+    <div id="forkMeOnGithub">
+      <%= link_to 'Fork me on github', 'https://github.com/tenderlove/rubycommitters.org' %>
+    </div>
+
   </body>
 </html>
