--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -84,6 +84,22 @@ body {
   padding-top: 70px;
 }
 
+#forkMeOnGithub {
+  -webkit-transform: rotate(-45deg);
+  text-align: center;
+  position: fixed;
+  bottom: 60px;
+  right: -45px;
+  z-index: 1;
+  -webkit-box-shadow: 0px 1px 3px black;
+}
+
+#forkMeOnGithub a{
+  color: white;
+  padding: 10px 50px 10px 50px;
+  background: -webkit-gradient(linear, left top, left bottom, from(#339900), to(#003300));
+}
+
 #accounts li.account {
   display: inline-block;
   width: 300px;
