--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Ruby Committers</title>
+  <%= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Cherry+Cream+Soda', 'http://fonts.googleapis.com/css?family=Allerta' %>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
@@ -9,7 +10,19 @@
 </head>
 <body>
 
-<%= yield %>
+<div id="wrapper">
+  <div id="header">
+    <h1>Ruby Committers</h1>
+  </div>
+  <div id="page">
+    <%= yield %>
+  </div>
+  <div id="footer">
+    
+  </div>
+  
+  <%= link_to 'fork me on github', 'http://github.com/tenderlove/rubycommitters.org' %>
+</div>
 
 </body>
 </html>
