--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -1,13 +1,9 @@
-<li>
+<li class="cleared">
+  <h2><%= account.username %></h2>
   <table>
-    <tr>
-      <td>Account:</td>
-      <td><%= account.username %></td>
-    </tr>
-
     <% unless account.names.empty? %>
       <tr>
-        <td>Names:</td>
+        <th>Names:</th>
         <td>
           <ul>
             <%= render :partial => 'name', :collection => account.names %>
@@ -18,7 +14,7 @@
 
     <% unless account.nicks.empty? %>
       <tr>
-        <td>Nicknames:</td>
+        <th>Nicknames:</th>
         <td>
           <ul>
             <%= render :partial => 'name', :collection => account.nicks %>
@@ -29,7 +25,7 @@
 
     <% unless account.sites.empty? %>
       <tr>
-        <td>Sites:</td>
+        <th>Sites:</th>
         <td>
           <ul>
             <%= render :partial => 'site', :collection => account.sites %>
@@ -40,7 +36,7 @@
 
     <% unless account.services.empty? %>
       <tr>
-        <td>Services:</td>
+        <th>Services:</th>
         <td>
           <ul>
             <%= render :partial => 'service', :collection => account.services %>
@@ -51,7 +47,7 @@
 
     <% unless account.portraits.empty? %>
       <tr>
-        <td>Portraits:</td>
+        <th>Portraits:</th>
         <td>
           <ul>
             <%= render :partial => 'portrait', :collection => account.portraits %>
@@ -62,7 +58,7 @@
 
     <% unless account.books.empty? %>
       <tr>
-        <td>Books:</td>
+        <th>Books:</th>
         <td>
           <ul>
             <% account.books.each do |book| %>
