--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,5 +1,4 @@
-<h1>Ruby Committers</h1>
-<%= link_to 'fork me on github', 'http://github.com/tenderlove/rubycommitters.org' %>
-<ul>
+<h1>Ruby Committers <%= link_to 'fork me on github', 'http://github.com/tenderlove/rubycommitters.org' %> </h1>
+<ul id="commiters">
 <%= render :partial => 'account', :collection => @accounts %>
 </ul>
