--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,22 @@
 <html>
 <head>
   <title>Ruby Committers</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+  <%= stylesheet_link_tag 'reset', 'site' %>
   <%= csrf_meta_tag %>
-  <%= analytics_tag %>
+  <%= analytics_tag %>        
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+  <%= javascript_include_tag 'masonry' %>
+  <script type="text/javascript">
+    $(window).load(function(){
+      $('#commiters').masonry({ columnWidth: 330 });
+    });
+  </script>
+  <script type="text/javascript" src="http://use.typekit.com/ush4dds.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
-
-<%= yield %>
-
+<div id="page">
+  <%= yield %>
+</div>
 </body>
 </html>
