--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -63,11 +63,11 @@ code {
   font-size: 150%;
 }
 #header {
-  background: #ff0000;
-  background-image:url('/images/header-background.gif');
+  background: #ff0000 url('/images/header-background.gif') repeat scroll 0 0;
   position: relative;
-  padding: 0.75em 1em;
-  border-bottom: 1px solid #444;
+  padding: .5em 1em .75em 1em;
+  margin: .6em 0 0 0;
+  border-bottom: 1px solid #803130;
   -webkit-border-top-right-radius: 4px;
   -webkit-border-top-left-radius: 4px;
   -moz-border-radius-topright: 4px;
@@ -78,12 +78,30 @@ code {
 }
 
 #header h1 {
+  position: relative;
   font-family: 'Cherry Cream Soda', arial, serif;
-  font-size: 175%;
+  font-size: 320%;
+  line-height: 1.25em;
+  margin: 0 0 -36px 0;
+  text-shadow: 2px 2px 3px #333;
+  z-index: 200;
 }
 
-#page { 
-  
+#page {
+  position: relative;
+  width: auto;
+  min-height: 100%;
+  font-size: 1.25em;
+  margin: 0 0 5% 0;
+  padding: 1.5em 1.5em 9em;
+  -webkit-background-clip: padding-box;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+     -moz-box-shadow: 1px 1px 4px #444;
+  -webkit-box-shadow: 1px 1px 4px #444;
+          box-shadow: 1px 1px 4px #444;
+  z-index: 100;
 }
 
 .image-wrapper {
@@ -94,26 +112,11 @@ code {
   height: 100%;
 }
 
-#page {
-  position: relative;
-  width: auto;
-  min-height: 100%;
-  font-size: 1.25em;
-  padding: 1.5em 1.5em 9em;
-  -webkit-background-clip: padding-box;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-     -moz-box-shadow: 1px 1px 4px #444;
-  -webkit-box-shadow: 1px 1px 4px #444;
-          box-shadow: 1px 1px 4px #444;
-}
-
 /* I'd love to fork you ;) */
 #fork_me {
   position: absolute;
   top: -1px;
-  right: 10%;
+  right: 14%;
   background: #FFF url(/images/octocat_tiny.png) no-repeat scroll 2% 50%;
   padding: 14px 10px 4px 40px;
   border: 1px solid #333;
@@ -127,12 +130,11 @@ code {
   -webkit-box-shadow: 2px 1px 3px #333;
      -moz-box-shadow: 2px 1px 3px #333;
           box-shadow: 2px 1px 3px #333;
-  
 }
 
 #content table {
- 	width: 50%;
-	margin: 0 auto;
+  width: 50%;
+  margin: 0 auto;
 }
 #content table th {
   font-weight: bold;
@@ -145,4 +147,8 @@ code {
 }
 #content table tr.last td {
   border-bottom: none;
+}
+#content .account li.nickname {
+  padding: .25em 0;
+  line-height: 1em;
 }
