--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,7 @@
   <title>Ruby Committers</title>
   <%= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Cherry+Cream+Soda', 'http://fonts.googleapis.com/css?family=Allerta' %>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
-  <%= analytics_tag %>
 </head>
 <body>
 
@@ -28,5 +26,8 @@
 
 <%= link_to 'fork me on github', 'http://github.com/tenderlove/rubycommitters.org', :id => 'fork_me' %>
 
+<%= javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js' %>
+<%= javascript_include_tag :defaults, 'jquery.lettering.min' %>
+<%= analytics_tag %>
 </body>
 </html>
